* README: Add some information.
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@28437 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-15  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	* README: Add some information.
+
 2008-07-14  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	Initial import.
