* src/hd-status-menu.c (hd_status_menu_map, hd_status_menu_unmap): Fix 	some warnings.
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@28454 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-07-16  Jan Arne Petersen  <jpetersen@openismus.com>
 
+	* src/hd-status-menu.c (hd_status_menu_map, hd_status_menu_unmap): Fix
+	some warnings.
+
+2008-07-16  Jan Arne Petersen  <jpetersen@openismus.com>
+
 	* src/hd-status-menu.c (hd_status_menu_dispose,
 	hd_status_menu_plugin_added_cb, hd_status_menu_plugin_removed_cb,
 	hd_status_menu_set_property, hd_status_menu_class_init,
