--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hildon-status-menu (0.1.1) unreleased; urgency=low
+
+  * Removed GTK_DOC_CHECK from configure.ac
+
+ -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 24 Jul 2008 15:36:31 +0300
+
 hildon-status-menu (0.1.0) unreleased; urgency=low
 
   * Initial release.
