* configure.ac: Update required libhildondesktop version.
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@29452 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-08-22  Jan Arne Petersen  <jpetersen@openismus.com>
 
+	* configure.ac: Update required libhildondesktop version.
+
+2008-08-22  Jan Arne Petersen  <jpetersen@openismus.com>
+
 	* src/hd-status-area-box.h:
 	* src/hd-status-area-box.c (hd_status_area_box_add,
 	  hd_status_area_box_pack): Add a function to pack a child into the
