* src/hd-status-area.c (hd_status_area_check_resize): Resize the 	window to the requested size. 	  (hd_status_area_class_init): Override 	  GtkContainerClass::check_resize function.
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@29527 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-08-26  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	* src/hd-status-area.c (hd_status_area_check_resize): Resize the
+	window to the requested size.
+	  (hd_status_area_class_init): Override
+	  GtkContainerClass::check_resize function.
+
 2008-08-22  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	* configure.ac: Update required libhildondesktop version.
