* src/hd-status-area-box.c (hd_status_area_box_reorder_child): Queue 	resize if children is visible. 	* src/hd-status-area.c (hd_status_area_check_resize): Fix resize if 	there is no configure notify event triggered. 	* src/hd-status-menu.c (hd_status_menu_check_resize): Fix resize if 	there is no configure notify event triggered.
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@29668 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2008-08-29  Jan Arne Petersen  <jpetersen@openismus.com>
 
+	* src/hd-status-area-box.c (hd_status_area_box_reorder_child): Queue
+	resize if children is visible.
+
+	* src/hd-status-area.c (hd_status_area_check_resize): Fix resize if
+	there is no configure notify event triggered.
+	* src/hd-status-menu.c (hd_status_menu_check_resize): Fix resize if
+	there is no configure notify event triggered.
+
+2008-08-29  Jan Arne Petersen  <jpetersen@openismus.com>
+
 	* src/hd-status-menu-config.h: Fix defintions.
 
 2008-08-29  Jan Arne Petersen  <jpetersen@openismus.com>
