* src/hd-status-area.c (update_position, 	  hd_status_area_plugin_configuration_loaded_cb): Update positions if 	  plugin configuration changed.
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@29669 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-08-29  Jan Arne Petersen  <jpetersen@openismus.com>
 
+	* src/hd-status-area.c (update_position,
+	  hd_status_area_plugin_configuration_loaded_cb): Update positions if
+	  plugin configuration changed.
+
+2008-08-29  Jan Arne Petersen  <jpetersen@openismus.com>
+
 	* src/hd-status-area-box.c (hd_status_area_box_reorder_child): Queue
 	resize if children is visible.
 
