--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-03  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	Released 0.3.0
+
 2008-08-29  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	* src/hd-status-area.c (hd_status_area_plugin_added_cb): Store plugin
