--- a/debian/changelog
+++ b/debian/changelog
@@ -1,16 +1,23 @@
-hildon-status-menu (0.2.0) unreleased; urgency=low
+hildon-status-menu (0.3.0) unstable; urgency=low
+
+  * Window property for better placement by the WM.
+  * Added support for setting a GtkWidget to Status Area for the clock applet.
+
+ -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed,  3 Sep 2008 19:48:39 +0300
+
+hildon-status-menu (0.2.0) unstable; urgency=low
 
   * New release with Status Area.
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 11 Aug 2008 13:30:20 +0300
 
-hildon-status-menu (0.1.1) unreleased; urgency=low
+hildon-status-menu (0.1.1) unstable; urgency=low
 
   * Removed GTK_DOC_CHECK from configure.ac
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 24 Jul 2008 15:36:31 +0300
 
-hildon-status-menu (0.1.0) unreleased; urgency=low
+hildon-status-menu (0.1.0) unstable; urgency=low
 
   * Initial release.
 
