new changelog entry for unreleased version
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@29789 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hildon-status-menu (0.3.1~unreleased) unstable; urgency=low
+
+  * Unreleased...
+
+ -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed,  3 Sep 2008 20:02:35 +0300
+
 hildon-status-menu (0.3.0) unstable; urgency=low
 
   * Window property for better placement by the WM.
