* configure.ac: Require libhildondesktop >= 2.1.4 	* src/hildon-status-menu.c (signal_handler, main): Use new stamp file 	functions.
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@30090 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-09-15  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	* configure.ac: Require libhildondesktop >= 2.1.4
+
+	* src/hildon-status-menu.c (signal_handler, main): Use new stamp file
+	functions.
+
 2008-09-03  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	Released 0.3.0
