* configure.ac: Update version to 0.3.2. Update required 	libhildondesktop1 version to 2.1.6. 	* src/hildon-status-menu.c (main): Don't unref the HDconfigFile 	instance.
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@31397 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-10-29  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	* configure.ac: Update version to 0.3.2. Update required
+	libhildondesktop1 version to 2.1.6.
+
+	* src/hildon-status-menu.c (main): Don't unref the HDconfigFile
+	instance.
+
 2008-09-24  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	* configure.ac: Update version to 0.3.1.
