--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hildon-status-menu (0.3.2~unreleased) unstable; urgency=low
+
+  * Update for libhildondesktop1 API changes.
+
+ -- Jan Arne Petersen <jpetersen@openismus.com>  Thu, 30 Oct 2008 00:41:05 +0100
+
 hildon-status-menu (0.3.1) unstable; urgency=low
 
   * Fixed stamp file (safe mode) support.
