--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-10-31  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	* debian/changelog: Release 0.3.2
+
+	* debian/control: Update requirements.
+
 2008-10-30  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	* debian/changelog: Prepare 0.3.2 release.
