--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-11-04  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	* debian/hildon-status-menu.init: Fix su use in sbox.
+
+	* debian/hildon-status-menu.install:
+	* debian/rules: Use cdbs to build the package.
+
+	* debian/conffiles (deleted): Remove conffiles (fix lintian issues).
+
 2008-10-31  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	* debian/compat: Add compat file.
