--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-11-04  Jan Arne Petersen  <jpetersen@openismus.com>
 
+	* debian/control: Add cdbs dependency.
+
+2008-11-04  Jan Arne Petersen  <jpetersen@openismus.com>
+
 	* debian/hildon-status-menu.init: Fix su use in sbox.
 
 	* debian/hildon-status-menu.install:
