--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hildon-status-menu (0.3.3~unreleased) unstable; urgency=low
+
+  * Added startup script to Xsession.post
+
+ -- Jan Arne Petersen <jpetersen@openismus.com>  Fri, 14 Nov 2008 10:22:27 +0200
+
 hildon-status-menu (0.3.2) unstable; urgency=low
 
   * Update for libhildondesktop1 API changes.
