--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-11-17  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	Released 0.3.3
+
+	* 15hildon-status-menu: New startup script for the Upstart startup
+	system.
+
 2008-11-04  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	* debian/control: Add cdbs dependency.
