--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hildon-status-menu (0.3.4) unstable; urgency=low
+
+  * Add autogen.sh run to create the configure script.
+
+ -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 19 Nov 2008 12:58:56 +0200
+
 hildon-status-menu (0.3.3) unstable; urgency=low
 
   * Added startup script to Xsession.post
