--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-12-11  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	* src/hd-status-area.c (status_area_icon_changed,
+	  hd_status_area_check_resize): Add debug messages. Fix resize.
+
 2008-11-17  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	Released 0.3.3
