* src/hd-status-menu.c (hd_status_menu_check_resize): Also fix the 	status menu.
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@33234 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-12-11  Jan Arne Petersen  <jpetersen@openismus.com>
 
+	* src/hd-status-menu.c (hd_status_menu_check_resize): Also fix the
+	status menu.
+
+2008-12-11  Jan Arne Petersen  <jpetersen@openismus.com>
+
 	* src/hd-status-area.c (status_area_icon_changed,
 	  hd_status_area_check_resize): Add debug messages. Fix resize.
 
