* configure.ac: Increase version. 	* debian/changelog: Increase version. 	* Makefile.am: 	* debian/hildon-status-menu.install: 	* hildon-status-menu.desktop.in (deleted): Remove .desktop file.
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@33276 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2008-12-12  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	* configure.ac: Increase version.
+
+	* debian/changelog: Increase version.
+
+	* Makefile.am: 
+	* debian/hildon-status-menu.install:
+	* hildon-status-menu.desktop.in (deleted): Remove .desktop file.
+
 2008-12-11  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	* src/hd-status-menu.c (hd_status_menu_check_resize): Also fix the
