--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-hildon-status-menu (0.3.5~unreleased) unstable; urgency=low
+hildon-status-menu (0.3.5) unstable; urgency=low
 
   * Fixed window sizing.
   * Removed .desktop file.
