start new version
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@33370 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hildon-status-menu (0.3.6~unreleased) unstable; urgency=low
+
+  * unreleased
+
+ -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 15 Dec 2008 15:54:23 +0200
+
 hildon-status-menu (0.3.5) unstable; urgency=low
 
   * Fixed window sizing.
