--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-12-19  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	* src/hildon-status-menu.c (main): Intialize Hildon by calling
+	  hildon_ini().
+
 2008-12-17  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	* src/hd-status-area-box.c: 
