--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-01-09  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	* src/hd-status-area.c (hd_status_area_check_resize): Remove debug
+	output.
+
 2008-12-19  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	* src/hd-status-area.c: Use generic names for special icons.
