--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-13  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	Released 0.3.6
+
 2009-01-09  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	* src/hd-status-area.c (hd_status_area_check_resize): Remove debug
