* src/hd-status-menu.c (hd_status_menu_init): Fix handling of delete 	event for the status menu.
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@34154 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-01-20  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	* src/hd-status-menu.c (hd_status_menu_init): Fix handling of delete
+	event for the status menu.
+
 2009-01-13  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	Released 0.3.6
