--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-20  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	Released 0.3.7
+
 2009-01-20  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	* src/hd-status-menu.c (hd_status_menu_init): Fix handling of delete
