* debian/changelog: Update. 	* src/hd-status-area.c (button_press_event_cb, hd_status_area_init): 	Show status menu on press instead of on release. Fixes NB#97704
git-svn-id: https://projects.maemo.org/svn/af/packages/fremantle/trunk/hildon-status-menu@34208 7feff2eb-67fc-0310-aff0-fef983b50a43

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-01-20  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	* debian/changelog: Update.
+
+	* src/hd-status-area.c (button_press_event_cb, hd_status_area_init):
+	Show status menu on press instead of on release. Fixes NB#97704
+
 2009-01-20  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	Released 0.3.7
