--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-26  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	Released 0.3.8
+
 2009-01-20  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	* debian/changelog: Update.
